@@ -4,6 +4,7 @@ Changes for 1.9
 
 Changes for 1.8.2
 
+ - [ZBX-2210] added template replace option for hosts mass update (Vedmak)
  - [ZBX-2219] fixed graphs data in data.sql (Aly)
  - [ZBX-1345] time filter redesigned, sliders moved to top inside filter (Vedmak)
  - [ZBX-2151] fixed header sorting in overview for items and triggers (AM)
